--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,14 @@
+asgiref==3.5.2
+Django==4.0.7
+flake8==5.0.4
+mccabe==0.7.0
+mypy==0.971
+mypy-extensions==0.4.3
+Pillow==9.2.0
 pkg_resources==0.0.0
+psycopg2-binary==2.9.3
+pycodestyle==2.9.1
+pyflakes==2.5.0
+sqlparse==0.4.2
+tomli==2.0.1
+typing_extensions==4.3.0
