--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,124 @@
 asgiref==3.5.2
-Django==4.0.7
-flake8==5.0.4
-mccabe==0.7.0
-mypy==0.971
+astroid==2.9.0
+attrs==21.4.0
+beautifulsoup4==4.9.3
+Brlapi==0.8.2
+cached-property==1.5.2
+certifi==2021.10.8
+cffi==1.15.1
+chardet==4.0.0
+charset-normalizer==2.0.12
+coreapi==2.3.3
+coreschema==0.0.4
+cryptography==38.0.1
+cupshelpers==1.0
+dbus-python==1.2.16
+defusedxml==0.7.1
+distro==1.5.0
+distro-info==1.0
+Django==4.1.1
+django-filter==21.1
+django-templated-mail==1.1.1
+djangorestframework==3.12.4
+djangorestframework-simplejwt==4.8.0
+djoser==2.1.0
+docker==4.1.0
+docker-compose==1.25.0
+dockerpty==0.4.1
+docopt==0.6.2
+drf-extra-fields==3.4.1
+flake8==4.0.1
+flake8-broken-line==0.4.0
+flake8-isort==4.1.1
+flake8-plugin-utils==1.3.2
+flake8-polyfill==1.0.2
+flake8-return==1.1.3
+fuse-python==1.0.2
+gpg===1.14.0-unknown
+greenlet==1.1.2
+html5lib==1.1
+idna==3.3
+importlib-metadata==1.6.0
+iniconfig==1.1.1
+isort==5.10.1
+itypes==1.2.0
+Jinja2==3.1.2
+jsonschema==3.2.0
+lazy-object-proxy==1.6.0
+louis==3.16.0
+lxml==4.6.3
+Markdown==3.3.4
+MarkupSafe==2.1.1
+mccabe==0.6.1
+Mirage==0.11.1
+more-itertools==4.2.0
+mypy==0.942
 mypy-extensions==0.4.3
-Pillow==9.2.0
-pkg_resources==0.0.0
-psycopg2-binary==2.9.3
-pycodestyle==2.9.1
-pyflakes==2.5.0
+mysql-connector-python==8.0.30
+numpy==1.23.2
+oauthlib==3.2.1
+packaging==21.3
+pandas==1.4.4
+pep8-naming==0.12.1
+Pillow==8.3.1
+platformdirs==2.4.0
+playwright==1.25.2
+pluggy==0.13.1
+protobuf==3.20.1
+psycopg2-binary==2.9.4
+py==1.11.0
+pycairo==1.16.2
+pycodestyle==2.8.0
+pycparser==2.21
+pycups==2.0.1
+pycurl==7.43.0.6
+pyee==8.1.0
+pyflakes==2.4.0
+Pygments==2.7.1
+PyGObject==3.38.0
+PyJWT==2.1.0
+pylibacl==0.6.0
+pylint==2.12.1
+pyparsing==3.0.8
+PyQt5==5.15.2
+PyQt5-sip==12.8.1
+pyrsistent==0.15.5
+pysmbc==1.0.23
+pytest==6.2.4
+pytest-django==4.4.0
+pytest-pythonpath==0.7.3
+python-apt==2.2.1
+python-dateutil==2.8.2
+python-debian==0.1.39
+python3-openid==3.2.0
+pytz==2022.1
+pytz-deprecation-shim==0.1.0.post0
+pyxattr==0.7.2
+pyxdg==0.27
+PyYAML==5.3.1
+requests==2.26.0
+requests-oauthlib==1.3.1
+six==1.16.0
+social-auth-app-django==4.0.0
+social-auth-core==4.3.0
+sorl-thumbnail==12.7.0
+soupsieve==2.2.1
 sqlparse==0.4.2
+telnetlib3==1.0.4
+testfixtures==6.18.3
+texttable==1.6.3
+toml==0.10.2
 tomli==2.0.1
-typing_extensions==4.3.0
+tornado==6.1
+typing_extensions==4.1.1
+tzdata==2022.2
+tzlocal==4.2
+unattended-upgrades==0.1
+uritemplate==4.1.1
+urllib3==1.26.9
+webencodings==0.5.1
+websocket-client==0.57.0
+websockets==10.1
+wrapt==1.13.3
+xdg==5
+zipp==1.0.0
