--- a/requirements.txt
+++ b/requirements.txt
@@ -2,12 +2,14 @@ asgiref==3.5.2
 astroid==2.9.0
 attrs==21.4.0
 beautifulsoup4==4.9.3
+black==22.10.0
 Brlapi==0.8.2
 cached-property==1.5.2
 certifi==2021.10.8
 cffi==1.15.1
 chardet==4.0.0
 charset-normalizer==2.0.12
+click==8.1.3
 coreapi==2.3.3
 coreschema==0.0.4
 cryptography==38.0.1
@@ -59,6 +61,7 @@ numpy==1.23.2
 oauthlib==3.2.1
 packaging==21.3
 pandas==1.4.4
+pathspec==0.10.1
 pep8-naming==0.12.1
 Pillow==8.3.1
 platformdirs==2.4.0
@@ -90,6 +93,7 @@ pytest-pythonpath==0.7.3
 python-apt==2.2.1
 python-dateutil==2.8.2
 python-debian==0.1.39
+python-dotenv==0.21.0
 python3-openid==3.2.0
 pytz==2022.1
 pytz-deprecation-shim==0.1.0.post0
