--- a/requirements_noapt.txt
+++ b/requirements_noapt.txt
@@ -1,9 +1,7 @@
 asgiref==3.5.2
 astroid==2.9.0
 attrs==21.4.0
-beautifulsoup4==4.9.3
 black==22.10.0
-Brlapi==0.8.2
 cached-property==1.5.2
 certifi==2021.10.8
 cffi==1.15.1
@@ -12,8 +10,8 @@ charset-normalizer==2.0.12
 click==8.1.3
 coreapi==2.3.3
 coreschema==0.0.4
+coverage==6.5.0
 cryptography==38.0.1
-cupshelpers==1.0
 dbus-python==1.2.16
 defusedxml==0.7.1
 distro==1.5.0
@@ -35,8 +33,6 @@ flake8-isort==4.1.1
 flake8-plugin-utils==1.3.2
 flake8-polyfill==1.0.2
 flake8-return==1.1.3
-fuse-python==1.0.2
-gpg===1.14.0-unknown
 greenlet==1.1.2
 html5lib==1.1
 idna==3.3
@@ -47,12 +43,9 @@ itypes==1.2.0
 Jinja2==3.1.2
 jsonschema==3.2.0
 lazy-object-proxy==1.6.0
-louis==3.16.0
-lxml==4.6.3
 Markdown==3.3.4
 MarkupSafe==2.1.1
 mccabe==0.6.1
-Mirage==0.11.1
 more-itertools==4.2.0
 mypy==0.942
 mypy-extensions==0.4.3
@@ -60,12 +53,9 @@ mysql-connector-python==8.0.30
 numpy==1.23.2
 oauthlib==3.2.1
 packaging==21.3
-pandas==1.4.4
 pathspec==0.10.1
 pep8-naming==0.12.1
 Pillow==8.3.1
-platformdirs==2.4.0
-playwright==1.25.2
 pluggy==0.13.1
 protobuf==3.20.1
 psycopg2-binary==2.9.4
@@ -74,23 +64,15 @@ pycairo==1.16.2
 pycodestyle==2.8.0
 pycparser==2.21
 pycups==2.0.1
-pycurl==7.43.0.6
 pyee==8.1.0
 pyflakes==2.4.0
 Pygments==2.7.1
-PyGObject==3.38.0
 PyJWT==2.1.0
 pylibacl==0.6.0
 pylint==2.12.1
 pyparsing==3.0.8
-PyQt5==5.15.2
-PyQt5-sip==12.8.1
 pyrsistent==0.15.5
-pysmbc==1.0.23
 pytest==6.2.4
-pytest-django==4.4.0
-pytest-pythonpath==0.7.3
-python-apt==2.2.1
 python-dateutil==2.8.2
 python-debian==0.1.39
 python-dotenv==0.21.0
@@ -99,7 +81,6 @@ pytz==2022.1
 pytz-deprecation-shim==0.1.0.post0
 pyxattr==0.7.2
 pyxdg==0.27
-PyYAML==5.3.1
 requests==2.26.0
 requests-oauthlib==1.3.1
 six==1.16.0
@@ -117,7 +98,6 @@ tornado==6.1
 typing_extensions==4.1.1
 tzdata==2022.2
 tzlocal==4.2
-unattended-upgrades==0.1
 uritemplate==4.1.1
 urllib3==1.26.9
 webencodings==0.5.1
