--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,15 +15,13 @@ services:
     volumes:
       - static_value:/app/static/
       - media_value:/app/media/
-    ports:
-      - "8000:8000"
     depends_on:
       - db
     env_file:
       - ./.env
 
   nginx:
-    image: nginx:latest
+    image: nginx:1.23.3
     ports:
       - "80:8080"
     volumes:
